--- a/_009_netflix-microservices/pom.xml
+++ b/_009_netflix-microservices/pom.xml
@@ -2,30 +2,46 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.6.6</version>
         <relativePath/>
     </parent>
+
     <groupId>com.mimaraslan</groupId>
     <artifactId>_009_netflix-microservices</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>_009_netflix-microservices</name>
     <description>_009_netflix-microservices</description>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>17</java.version>
     </properties>
+
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
@@ -53,7 +69,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>main-service-spring-cloud-remote-config-server</module>
-        <module>main-service-spring-cloud-remote-config-server</module>
+        <module>main-service-spring-cloud-eureka-server</module>
+        <module>main-service-spring-cloud-zuul-api-gateway-server</module>
         <module>service-a1</module>
         <module>service-b1</module>
         <module>service-limits</module>
@@ -64,6 +81,14 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
